// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`GET /internships Internships_200 1`] = `
Object {
  "data": Array [
    Object {
      "additional": null,
      "address": "TEST",
      "city": "Brest",
      "country": "France",
      "createdAt": Any<String>,
      "description": "Stage",
      "endAt": 20191012,
      "id": 1,
      "isLanguageCourse": true,
      "isValidated": false,
      "postalCode": "29280",
      "startAt": 20191012,
      "subject": "test",
      "updatedAt": Any<String>,
    },
  ],
  "length": 1,
  "max": 1,
  "page": 1,
}
`;

exports[`GET /internships/:id Internships_200 1`] = `
Object {
  "additional": null,
  "address": "TEST",
  "business": null,
  "city": "Brest",
  "country": "France",
  "createdAt": Any<String>,
  "description": "Stage",
  "endAt": 20191012,
  "id": Any<Number>,
  "isLanguageCourse": true,
  "isValidated": false,
  "postalCode": "29280",
  "startAt": 20191012,
  "student": null,
  "subject": "test",
  "updatedAt": Any<String>,
}
`;

exports[`GET /internships/:id/businesses Internships_200_WithLinkedData 1`] = `
Object {
  "additional": null,
  "address": "TEST",
  "city": "Brest",
  "country": "France",
  "createdAt": Any<String>,
  "id": 1,
  "name": "test",
  "postalCode": "29200",
  "updatedAt": Any<String>,
}
`;

exports[`GET /internships/:id/students Internships_200_WithLinkedData 1`] = `
Object {
  "createdAt": Any<String>,
  "email": "john.doe@enib.fr",
  "firstName": "John",
  "id": 1,
  "lastName": "Doe",
  "semester": "S10",
  "updatedAt": Any<String>,
}
`;

exports[`POST /internships ValidInternships_200 1`] = `
Object {
  "address": "TEST",
  "city": "Brest",
  "country": "France",
  "createdAt": Any<String>,
  "description": "Stage",
  "endAt": 20191012,
  "id": Any<Number>,
  "isLanguageCourse": true,
  "isValidated": false,
  "postalCode": "29280",
  "startAt": 20191012,
  "subject": "test",
  "updatedAt": Any<String>,
}
`;

exports[`POST /internships/:id/businesses/:business_id/link Internships_200_WithBusiness 1`] = `
Object {
  "additional": null,
  "address": "TEST",
  "city": "Brest",
  "country": "France",
  "createdAt": Any<String>,
  "id": 2,
  "name": "test",
  "postalCode": "29200",
  "updatedAt": Any<String>,
}
`;

exports[`POST /internships/:id/students/:student_id/link Internships_200_WithStudent 1`] = `
Object {
  "createdAt": Any<String>,
  "email": "john.doe@enib.fr",
  "firstName": "John",
  "id": 2,
  "lastName": "Doe",
  "semester": "S10",
  "updatedAt": Any<String>,
}
`;

exports[`PUT /internships/:id Internships_200_NotAnyDataUpdated 1`] = `
Object {
  "additional": null,
  "address": "TEST",
  "city": "Brest",
  "country": "France",
  "createdAt": Any<String>,
  "description": "Stage",
  "endAt": 20191012,
  "id": Any<Number>,
  "isLanguageCourse": true,
  "isValidated": false,
  "postalCode": "29280",
  "startAt": 20191012,
  "subject": "test",
  "updatedAt": Any<String>,
}
`;

exports[`PUT /internships/:id Internships_200_UpdateAllData 1`] = `
Object {
  "additional": "additional data",
  "address": "TEST",
  "city": "Brest",
  "country": "France",
  "createdAt": Any<String>,
  "description": "Stage",
  "endAt": 20191012,
  "id": Any<Number>,
  "isLanguageCourse": true,
  "isValidated": false,
  "postalCode": "29280",
  "startAt": 20191012,
  "subject": "test",
  "updatedAt": Any<String>,
}
`;
